--- a/public/css/layout/frase.css
+++ b/public/css/layout/frase.css
@@ -6,7 +6,7 @@
     justify-content: center; 
     align-items: center; 
     text-align: center; 
-    background: linear-gradient(135deg, #ff0000, #ff7f00); 
+    background: linear-gradient(135deg, #FF914D, #fd7019);
     color: white; 
     font-size: 2rem; 
     font-weight: bold;
