--- a/public/css/paginas/cliente/perfil_cliente.css
+++ b/public/css/paginas/cliente/perfil_cliente.css
@@ -180,6 +180,21 @@ body {
     background-color: #e57373;
 }
 
+.contador-notificaciones-mensajes {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    color: white;
+    font-size: 14px;
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    margin-left: 8px;
+    vertical-align: middle;
+    font-weight: bold;
+}
+
 
 
 @media (max-width: 900px) and (min-width: 700px) {
